Added swagger url to urls not requiring authentication